# monarch_mcp

./: .gitignore  LICENSE  README.md  login.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
monarch_mcp/: __init__.py  __main__.py  client.py  errors.py
monarch_mcp/tools/: accounts.py  budgets.py  categories.py  transactions.py
reports/template/: report.css  report.html
scripts/: build_standalone_report.py  fetch_report_data.py  generate_report.py  recategorize.py
src/monarch/: __init__.py  __main__.py  client.py  errors.py  login.py  server.py
src/monarch/tools/: __init__.py  accounts.py  budgets.py  categories.py  transactions.py
tests/: test_errors.py  test_transactions.py
